--- a/resources/html/help/help.css
+++ b/resources/html/help/help.css
@@ -5,33 +5,35 @@ body {
 }
 
 .container {
-    background: url(./theme/bake-1.jpg) top left no-repeat;
+    background: url("./theme/bake-1.jpg") top left no-repeat;
     background-size: 100% auto;
     width: 830px;
+}
+.head-box {
+    margin: 5% 0 0 0;
+    padding-bottom: 0;
+}
+
+.title {
+    font-size: 50px;
+    color: #5dc1d9;
+    text-align: center
 }
 
 .label {
     font-family: Number, "微软雅黑", sans-serif;
-}
-
-.head-box {
-    margin: 60px 0 0 0;
-    padding-bottom: 0;
-}
-
-.head-box .title {
-    font-size: 50px;
+    text-align: center;
 }
 
 .cont-box {
-    border-radius: 15px;
+    border-radius: 25px;
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 5px 15px;
     overflow: hidden;
     box-shadow: 0 5px 10px 0 rgb(0 0 0 / 15%);
     position: relative;
-    background: rgba(43, 52, 61, 0.8);
+    background: rgba(43, 52, 61, 50%);
 
 }
 
@@ -44,48 +46,38 @@ body {
 
 .help-table {
     text-align: center;
+
     border-collapse: collapse;
     margin: 5px -10px -10px -15px;
     border-radius: 0 0 10px 10px;
     display: table;
     overflow: hidden;
     width: calc(100% + 30px);
-    color: #fff;
 }
 
 .help-table .tr {
     display: table-row;
 }
 
-.help-table .td,
-.help-table .th {
+.help-table .td {
     font-size: 14px;
-    display: table-cell;
+    display: inline-block;
     box-shadow: 0 0 1px 0 #888 inset;
-    padding: 12px 0 12px 50px;
     line-height: 24px;
     position: relative;
     width: 33.33%;
-    text-align: left;
+    text-align: center;
 }
 
 .help-table .tr:nth-child(odd) {
-    background: rgba(34, 41, 51, .6)
-}
-
-.help-table .tr:nth-child(even) {
     background: rgba(34, 41, 51, .3)
 }
-
 .help-table .tr:last-child .td {
     padding-bottom: 12px;
 }
 
-.help-table .th {
-    background: rgba(34, 41, 51, .5)
-}
-
 .help-title {
+    padding: 5px 0 0 50px;
     display: block;
     color: #d3bc8e;
     font-size: 16px;
@@ -93,8 +85,16 @@ body {
 }
 
 .help-desc {
+    padding: 0 0 5px 50px;
     display: block;
     font-size: 13px;
     line-height: 18px;
     color: #eee;
+}
+
+.bottom-box {
+    text-align: center;
+    /*position: relative;*/
+    bottom: 10px;
+    color: #5dc1d9;
 }
