--- a/resources/common/layout/default.html
+++ b/resources/common/layout/default.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="#"/>
-    <link rel="preload" href="{{yaya_path}}common/font/HYWH-65W.woff" as="font" type="font/woff">
-    <link rel="stylesheet" type="text/css" href="{{css}}"/>
-    <title>miao-plugin</title>
+    <link rel="preload" href="{{yaya_path}}common/font/汉仪猫小奴体简.woff" as="font" type="font/woff">
+    <link rel="preload" href="{{yaya_path}}common/font/喵小姐体.woff" as="font" type="font/woff">
+    <link rel="preload" href="{{yaya_path}}common/font/Aa-海芒星体.woff" as="font" type="font/woff">
+    <link rel="stylesheet" type="text/css" href="{{yaya_path}}html/help/index.css"/>
+    <title>yaya-plugin</title>
 </head>
 <body>
 <div class="container">
