--- a/resources/html/help/index.css
+++ b/resources/html/help/index.css
@@ -1,11 +1,20 @@
 @font-face {
-  font-family: 'HYWH-65W';
-  src: url("../../common/font/HYWH-65W.ttf");
+  font-family: '汉仪猫小奴体简';
+  src: url("../../common/font/汉仪猫小奴体简.ttf");
+}
+@font-face {
+  font-family: '喵小姐体';
+  src: url("../../common/font/喵小姐体.ttf");
+}
+@font-face {
+  font-family: 'Aa-海芒星体';
+  src: url("../../common/font/Aa-海芒星体.ttf");
 }
 body {
   background-image: url(./theme/bake-1.jpg);
-  font-family: HYWH-65W, serif;
+  font-family: '喵小姐体', sans-serif;
   font-size: 18px;
+  color: #fff;
 }
 body .container {
   padding: 1px;
@@ -14,58 +23,50 @@ body .container .info-box {
   text-align: center;
   margin-top: 20px;
 }
-body .container .info-box .head-box {
-  color: #fff;
-}
 body .container .info-box .head-box .title {
+  font-family: 'Aa-海芒星体', sans-serif;
   font-size: 36px;
-  text-shadow: 0 0 1px #000, 3px 2px 3px rgba(0, 0, 0, 0.9);
+  text-shadow: 3px 2px 3px rgba(0, 0, 0, 0.3);
 }
 body .container .info-box .head-box .label {
-  margin: 5px 50px 0 0;
-  text-align: right;
-  background-image: linear-gradient(to right, #ff0000, orange, yellow, green, #00ff00, blue, purple);
+  background: linear-gradient(to right, red, yellow, lime, aqua, blue, fuchsia) 0 / 50%;
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-clip: text;
 }
 body .container .cont-box {
   border-radius: 25px;
   margin: 10px 30px 15px;
   overflow: hidden;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(3px);
+  box-shadow: inset 0 0 10px #888;
+  box-sizing: border-box;
 }
 body .container .cont-box .cont-center {
   margin: auto;
-  width: 30%;
+  width: fit-content;
   text-align: center;
 }
 body .container .cont-box .cont-center .help-group {
-  color: #ffffff;
-  text-shadow: 1px 1px 2px rgba(105, 105, 105, 0.5);
-  border-radius: 0 0 15px 15px;
-  margin-top: -10px;
-  box-shadow: inset -1px -1px 10px 0 pxrgba(0, 0, 0, 0.3);
-  border-color: rgba(0, 0, 0, 0.9);
-  border-style: inset;
+  text-shadow: 2px 2px 2px #696969;
+  border-radius: 0 0 10px 10px;
+  border-color: rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 0 10px #888;
   border-top: transparent;
-  padding: 15px 15px 10px 20px;
+  padding: 5px 10px ;
 }
 body .container .cont-box .help-table {
   text-align: center;
   border-collapse: collapse;
   margin: 0;
-  border-radius: 0 0 10px 10px;
   display: table;
   overflow: hidden;
   width: 100%;
-  color: #fff;
 }
 body .container .cont-box .help-table .tr {
   display: table-row;
 }
 body .container .cont-box .help-table .tr .td {
-  font-size: 14px;
   display: table-cell;
   padding: 10px;
   position: relative;
@@ -73,32 +74,34 @@ body .container .cont-box .help-table .tr .td {
   width: 33.33%;
 }
 body .container .cont-box .help-table .tr .td .th {
-  overflow: hidden;
   padding: 10px;
-  border-style: outset;
   border-radius: 15px;
   border-width: 2px;
   height: 50px;
   display: block;
-  border-color: rgba(0, 0, 0, 0.5);
-  border-top: transparent;
-  outline: 2px ridge rgba(0, 0, 0, 0.3);
+  color: rgba(225, 225, 225, 0.9);
+  box-shadow: inset 0 0 10px #888;
 }
 body .container .cont-box .help-table .tr .td .th .help-title {
   display: block;
-  color: #0000CD;
-  font-size: 16px;
   line-height: 24px;
 }
 body .container .cont-box .help-table .tr .td .th .help-desc {
-  color: #00FF00;
+  color: #d4b98c;
   display: block;
   font-size: 13px;
   line-height: 18px;
 }
 body .container .copyright {
   text-align: center;
+  font-family: '汉仪猫小奴体简', sans-serif;
+  position: absolute;
+  bottom: 15px;
+  margin: auto;
+  left: 0;
+  right: 0;
 }
 body .container .copyright .version {
   display: inline-block;
+  font-family: 'Aa-海芒星体', sans-serif;
 }
