--- a/resources/html/help/index.less
+++ b/resources/html/help/index.less
@@ -1,13 +1,23 @@
 @font-face {
-  font-family: 'HYWH-65W';
-  src: url("../../common/font/HYWH-65W.ttf");
+  font-family: '汉仪猫小奴体简';
+  src: url("../../common/font/汉仪猫小奴体简.ttf");
+}
+
+@font-face {
+  font-family: '喵小姐体';
+  src: url("../../common/font/喵小姐体.ttf")
+}
+
+@font-face {
+  font-family: 'Aa-海芒星体';
+  src: url("../../common/font/Aa-海芒星体.ttf");
 }
 
 body {
   background-image: url(./theme/bake-1.jpg);
-  font-family: HYWH-65W, serif;
+  font-family: '喵小姐体', sans-serif;
   font-size: 18px;
-
+  color: #fff;
 
   .container {
     padding: 1px;
@@ -17,21 +27,21 @@ body {
       margin-top: 20px;
 
       .head-box {
-        color: #fff;
 
         .title {
+          font-family: 'Aa-海芒星体', sans-serif;
           font-size: 36px;
-          text-shadow: 0 0 1px #000, 3px 2px 3px rgba(0, 0, 0, 0.9);
+          text-shadow: 3px 2px 3px rgba(0, 0, 0, 0.3);
         }
 
         .label {
-          margin: 5px 50px 0 0;
-          text-align: right;
+          //margin: 5px 50px 0 0;
+          //text-align: right;
           //颜色渐变
-          background-image: linear-gradient(to right, #ff0000, orange, yellow, green, #00ff00, blue, purple);
+          background: linear-gradient(to right, red, yellow, lime, aqua, blue, fuchsia) 0 / 50%;
+          background-clip: text;
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
-          background-clip: text;
         }
       }
     }
@@ -44,24 +54,27 @@ body {
       //溢出隐藏
       overflow: hidden;
       //背景模糊
-      backdrop-filter: blur(5px);
+      backdrop-filter: blur(3px);
+      //内部阴影
+      box-shadow: inset 0 0 10px #888;
+      box-sizing: border-box;
 
       .cont-center {
         margin: auto;
-        width: 30%;
+        width: fit-content;
         text-align: center;
 
         .help-group {
-          color: #ffffff;
-          text-shadow: 1px 1px 2px rgba(105, 105, 105,0.5);
-          border-radius: 0 0 15px 15px;
-          margin-top: -10px;
-          //内部阴影
-          box-shadow: inset -1px -1px 10px 0 pxrgba(0,0,0,0.3);
-          border-color: rgba(0, 0, 0, 0.9);
-          border-style: inset;
+          //字体阴影
+          text-shadow: 2px 2px 2px rgba(105, 105, 105, 1);
+          border-radius: 0 0 10px 10px;
+          border-color: rgba(0, 0, 0, 0.5);
+          //border: solid;
+          //border-width:1px;
+          //border-color:beige;
+          box-shadow: inset 0 0 10px #888;
           border-top: transparent;
-          padding: 15px 15px 10px 20px;
+          padding: 5px 10px ;
         }
       }
 
@@ -69,16 +82,14 @@ body {
         text-align: center;
         border-collapse: collapse;
         margin: 0;
-        border-radius: 0 0 10px 10px;
         display: table;
         overflow: hidden;
         width: 100%;
-        color: #fff;
+
         .tr {
           display: table-row;
 
           .td {
-            font-size: 14px;
             display: table-cell;
             padding: 10px;
             position: relative;
@@ -86,26 +97,22 @@ body {
             width: 33.33%;
 
             .th {
-              overflow: hidden;
               padding: 10px;
-              border-style: outset;
               border-radius: 15px;
               border-width: 2px;
               height: 50px;
               display: block;
-              //box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
-              border-color: rgba(0, 0, 0, 0.5);
-              border-top: transparent;
-              outline: 2px ridge rgba(0, 0, 0, 0.3);
+              color: rgba(225,225,225,0.9);
+              //outline: 0.2px ridge;
+              box-shadow:inset 0 0 10px #888;
+
               .help-title {
                 display: block;
-                color: #0000CD;
-                font-size: 16px;
                 line-height: 24px;
               }
 
               .help-desc {
-                color: #00FF00;
+                color: #d4b98c;
                 display: block;
                 font-size: 13px;
                 line-height: 18px;
@@ -118,9 +125,15 @@ body {
 
     .copyright {
       text-align: center;
-
+      font-family: '汉仪猫小奴体简', sans-serif;
+      position:absolute;
+      bottom: 15px;
+      margin: auto;
+      left: 0;
+      right: 0;
       .version {
         display: inline-block;
+        font-family: 'Aa-海芒星体', sans-serif;
       }
     }
   }
