--- a/resources/handlebars/help/help.less
+++ b/resources/handlebars/help/help.less
@@ -63,13 +63,13 @@ body {
   /** 溢出隐藏 **/
   overflow: hidden;
   /** 高斯模糊 **/
-  backdrop-filter: blur(6px);
+  //backdrop-filter: blur(6px);
   /** 内部阴影 **/
-  box-shadow: inset 2px 2px 10px 2px aliceblue, inset -2px -2px 10px 2px aliceblue, 5px 5px 10px 0 rgb(0 0 0 / 45%);
+  //box-shadow: inset 2px 2px 10px 2px aliceblue, inset -2px -2px 10px 2px aliceblue, 5px 5px 10px 0 rgb(0 0 0 / 45%);
   /** 设置实线边框 **/
-  //border-style: solid;
+  border-style: solid;
   /** 边框宽度 **/
-  //border-width: 1px;
+  border-width: 1px;
   /** 设置怪异盒子模型 **/
   box-sizing: border-box;
 
@@ -77,7 +77,6 @@ body {
     margin: auto;
     width: fit-content;
     height: 50px;
-    color: #7700FF;
     font-family: '喵小姐体', sans-serif;
     //box-shadow: inset 0 0 10px 3px aliceblue;
     border-style: outset;
@@ -118,7 +117,6 @@ body {
       .cont-title {
         margin: 10px 15px 0;
         font-family: 'Aa-海芒星体', sans-serif;
-        color: #FF3333;
         font-size: 15px;
       }
 
@@ -126,7 +124,6 @@ body {
         margin: 0 15px 5px;
         font-family: '汉仪猫小奴体简', sans-serif;
         font-size: 16px;
-        color: #FF7744;
       }
     }
   }
